# dioxus-desktop-test

./: Cargo.toml  Dioxus.toml  README.md
assets/: tailwind.css
src/: app.rs  main.rs  routes.rs
src/routes/: blog.rs  home.rs
